<resources>
    <string name="app_name">FindVet</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="next">next</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="create">Create</string>
    <string name="farmer_s_account_creation">Farmer\'s signup</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="farmer_s_login">Farmer\'s login</string>
    <string name="farmercontact">Contact</string>
    <string name="_254_7">+254 7</string>
    <string name="contact">Contact</string>
    <string name="title_activity_vet_signin">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Notifications">Notifications</string>
    <string name="signup">Signup</string>
    <string name="sign_up">Don\'t have any account? sign up</string>
    <string name="registration_number">Registration number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="CreateAccount">Don\'t have an account? Signup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="make_a_request">Make a request</string>
    <string name="_11_40">11_40</string>
    <string name="message">Message</string>
    <string name="name">Name</string>
    <string name="enter_your_email_address_in_the_field_below_and_click_the_button_below_it_to_reset_your_password">Enter your email address in the field below and click the button below it to reset your password.</string>
    <string name="reset_password">Reset password</string>
    <string name="profile">Profile</string>
    <string name="hello_there">Hello_there</string>
    <string name="hey_there">Hey there</string>
    <string name="login1">Login</string>
    <string name="make_your_request">Make your request</string>
    <string name="vet_s_login">Vet\'s login</string>
    <string name="vet_signup">Vet signup</string>
    <string name="signout">Signout</string>
    <string name="make_request">Make request</string>
    <string name="my_requests">My requests</string>
</resources>
