<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/farmer2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/farmer_s_account_creation"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#080"
            android:textSize="18sp"
            android:layout_margin="12dp" />

        <LinearLayout
            android:id="@+id/details"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="15"
                app:counterTextAppearance="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:fontFamily="serif"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:fontFamily="serif"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+254  7"
                    android:textSize="17sp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/code"
                    android:layout_toEndOf="@+id/code">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact"
                        android:fontFamily="sans-serif"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:maxLength="8"
                        android:backgroundTint="@color/colorPrimary"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:backgroundTint="@color/colorPrimary"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/createBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#080"
                android:text="@string/signup"
                android:textColor="#FFF"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                app:textAllCaps="false"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:background="#FFF"
                android:textSize="16sp"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
