<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.locvet.vetsignup">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/vacine"
            android:layout_marginTop="50dp"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="Vet signup"
            android:textAlignment="center"
            android:textColor="#080"
            android:textSize="20sp"
            android:layout_margin="12dp" />

        <LinearLayout
            android:id="@+id/vetdetails"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimary"
            android:fadingEdgeLength="5dp"
            android:isScrollContainer="true"
            android:showDividers="end">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterMaxLength="15"
                app:counterTextAppearance="@color/colorPrimary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vetname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_person"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:fontFamily="serif"
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vetemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:fontFamily="serif"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="16sp" />

            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+254  7"
                    android:textSize="17sp"
                    android:textColor="#000"
                    android:layout_marginTop="20dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/code">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/contact"
                        android:maxLength="8"
                        android:fontFamily="sans-serif"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>


            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/registration_number"
                    android:inputType="textCapWords"
                    android:textSize="16sp"
                    android:padding="8dp"
                    android:textColor="#666"
                    android:backgroundTint="@color/colorPrimary"
                    android:fontFamily="sans-serif"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vetpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/vetconfirmpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="15dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:drawableTint="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:fontFamily="serif"
                    android:inputType="textPassword"
                    android:drawableLeft="@drawable/ic_lock" />

            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/vetsignupBtn"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="#080"
                android:text="@string/singup"
                android:textColor="#FFF"
                android:layout_margin="20dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/vetlogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/already_have_an_account_login"
                android:textAllCaps="false"
                android:textSize="16sp"
                android:textAlignment="center"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>
