<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/locvet2_2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/vet_login"
            android:textAlignment="center"
            android:textColor="#090"
            android:textSize="24sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailvet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordvet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:drawableStart="@drawable/ic_lock"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/loginVet"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="100dp"
                android:background="#080"
                android:text="Login"
                android:textColor="#FFF" />
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:background="#FFF"
                android:textColor="#000"
                android:fontFamily="serif"
                android:textSize="13sp"/>
        </RelativeLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/createVet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#FFF"
            android:fontFamily="sans-serif"
            android:padding="20dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

</ScrollView>
